# qrthing

./: .gitignore  README.md  app.py  db.py  messages.pot  pyproject.toml  tailwind.config.js
app/: app.py  db.py
app/blueprints/: api.py  auth.py  index.py
app/misc/: forms.py
app/misc/helpers/: auth_helpers.py  qr_helpers.py  text_helpers.py  typing_hacks.py
app/static/css/: style.css
app/templates/: base.j2  index.j2  navbar.j2
app/templates/auth/: login.j2
app/translations/cs/LC_MESSAGES/: messages.po
blueprints/: index.py
scripts/: compile_translations.bat  extract_strings.bat  tailwind.bat  update_translations.bat
static/css/: style.css
templates/: base.j2  index.j2  navbar.j2
