[project]
name = "qrthing"
version = "0.1.0"
description = "Dynamic QR code generator and redirect server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "peewee>=4.0.2",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "waitress>=3.0.2",
]
